# aria-core

./: .gitignore  README.md  pyproject.toml
docs/: api-reference.md  architecture.md  examples.md  getting-started.md
examples/: basic_agent.py  risk_scoring.py
src/aria_core/: __init__.py
src/aria_core/adapters/: __init__.py  anthropic.py  base.py  openai.py  xai.py
src/aria_core/orchestration/: __init__.py  deep_bridge.py
src/aria_core/permissions/: __init__.py  approval_engine.py  models.py  risk_engine.py
src/aria_core/planning/: __init__.py  models.py  plan_engine.py
src/aria_core/router/: __init__.py  router.py  strategies.py
src/aria_core/runtime/: __init__.py  models.py  state_machine.py  states.py  transitions.py
tests/unit/: test_adapters.py  test_deep_bridge.py  test_permissions.py  test_planning.py  test_router.py  test_runtime.py
